--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,10 +4,10 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: grey;
   color: #212121;
   line-height: 1.5;
 }
@@ -17,4 +17,44 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+}
+
+.country-list__item {
+  display: flex;
+  align-items: center;
+}
+
+.country-list__item--flag {
+  width: 30px;
+  height: 20px;
+}
+
+.country-list__item--name {
+  font-weight: 400;
+  font-size: 20px;
+  margin: 5px 10px;
+}
+
+.country-info__list {
+  list-style: none;
+  padding: 0;
+}
+
+.country-info__item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.country-info__item--flag {
+  width: 60px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+
+
+.country-info__item--categories {
+  font-weight: bold;
+  margin-right: 5px;
 }
