--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,7 @@ body {
   Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: grey;
+  background-color: lightskyblue;
   color: #212121;
   line-height: 1.5;
 }
